traefik/traefik-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: myk8s.net
      http:
        paths:
          - path: /traefik
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 9000
